Scroller: fix overlapping scrollhide on Safari

--- a/styles/essentials.css
+++ b/styles/essentials.css
@@ -1219,6 +1219,7 @@ body.aux-cursor-row-resize * {
 .aux-scroller > .aux-scrollbar {
   position: absolute;
   display: block;
+  transform: translateZ(1000px);
 }
 .aux-scroller > .aux-scrollbar.aux-top {
   top: 0;
